tests/ui/object-lifetime/object-lifetime-default-assoc-ty-binding-item-bounds.stderr
error[E0228]: the lifetime bound for this object type cannot be deduced from context; please supply an explicit bound
  --> $DIR/object-lifetime-default-assoc-ty-binding-item-bounds.rs:24:50
   |
LL | fn bar<'a>(x: &'a str) -> &'a dyn Foo<'a, Item = dyn Bar> { &() }
   |                                                  ^^^^^^^

error[E0228]: the lifetime bound for this object type cannot be deduced from context; please supply an explicit bound
  --> $DIR/object-lifetime-default-assoc-ty-binding-item-bounds.rs:28:36
   |
LL | fn baz(x: &str) -> &dyn Foo<Item = dyn Bar> { &() }
   |                                    ^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0228`.
